# grpc-web-k8s-envoy-garden-sample

./: .gitignore  README.md  project.garden.init.sh  project.garden.yml
ops/garden/infrastructure/dashboard/: README.md  dashboard-v2.2.0.yml  garden.yml  start_dashboard.sh
ops/garden/infrastructure/logging/: README.md  elasticsearch.yml  fluentd.yml  garden.yml  kibana.yml  start_kibana.sh
ops/garden/infrastructure/prometheus/: README.md
ops/garden/templates/base-app/: base-app-inputs.json  garden.yml
src/frontend-mui/: .gitignore  Dockerfile  README.md  build.js  compile_protos.sh  garden.yml  index.ts  package-lock.json  package.json  tsconfig.json
src/frontend-mui/assets/: App.tsx  globals.css  index.tsx
src/frontend-mui/assets/components/: GridExample.tsx  RpcExample.tsx  SpeedDialExample.tsx  VerticalStepperExample.tsx
src/frontend-mui/assets/overmind/: actions.ts  effects.ts  index.ts  operators.ts  state.ts
src/frontend-mui/public/: index.html
src/frontend-mui/scripts/: npm_run_watch.sh
src/grpc_example/: Cargo.toml  Dockerfile  build.rs  garden.yml
src/grpc_example/envoy/: Dockerfile  envoy.yaml  garden.yml
src/grpc_example/proto/: cli.proto
src/grpc_example/src/: main.rs
src/grpc_example/src/remotecli/: client.rs  server.rs
