[package]
name = "grpc_example"
version = "0.1.0"
authors = ["Patrick de Lanauze <patrick.delanauze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.10", features = ["full"] }

[build-dependencies]
tonic-build = "0.5.2"
